--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,8 @@ name = "portfolio-backend"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [".", "api"]
 
 [dependencies]
-actix-web = "4.3.1"
-serde = { version = "1.0.164", features = ["derive"] }
-serde_json = "1.0.97"
-env_logger = "0.10.0"
+actix-api = { path = "api" }
