--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 actix-web = "4.3.1"
 serde = { version = "1.0.164", features = ["derive"] }
 env_logger = "0.10.0"
+entity = { path = "../entity" }
