--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 actix-web = "4.3.1"
 serde = { version = "1.0.164", features = ["derive"] }
 env_logger = "0.10.0"
-entity = { path = "../entity" }
+entity = {path = "../entity"}
+migration = { path = "../migration" }
